--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
 
     <!--GSAP & ScrollToPlugin-->
@@ -79,6 +80,7 @@
     ></script>
 
     <script defer src="./js/youtube.js"></script>
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
   <body>
